infra/post-deploy/manifests/prometheus/cilium-gateway-monitoring.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: cilium-gateway-monitoring
  namespace: monitoring
spec:
  gatewayClassName: cilium
  addresses:
  - type: IPAddress
    value: 192.168.31.9
  listeners:
  - protocol: HTTP
    port: 80
    name: http-gw
    allowedRoutes:
      namespaces:
        from: Same
