infra/post-deploy/manifests/prometheus/monitoring-gateway.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: monitoring-gateway
  namespace: monitoring
spec:
  gatewayClassName: cilium
#  addresses:
#  - type: IPAddress
#    value: 192.168.100.1
  listeners:
  - name: https
    protocol: HTTPS
    port: 443
    hostname: "*.192.168.100.1.sslip.io"
    allowedRoutes:
      namespaces:
        from: Same
    tls:
      mode: Terminate
      certificateRefs:
      - kind: Secret
        name: monitoring-gateway-tls
